[package]
name = "raze"
version = "0.3.1"
authors = ["Kongou <kongou@shipfu.moe>"]
description = "Rust-friendly API for for Backblaze's B2 backend - Includes raw calls and helpers"
keywords = ["b2", "api", "backup", "backblaze"]
categories = ["api-bindings"]
exclude = ["credentials"]
readme = "README.md"
edition = "2018"
repository = "https://github.com/KongouDesu/raze"
license = "MIT"


[dependencies]
base64 = "0.12.3"
hyper = "0.13.7"
url = "2.1.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.sha1]
version = "0.6.0"
features = ["std"]

[dependencies.reqwest]
version = "0.10.7"
features = ["blocking"]