[package]
name = "raze"
version = "0.3.2"
authors = ["Kongou <kongou@shipfu.moe>"]
description = "Rust-friendly API for for Backblaze's B2 backend - Includes raw calls and helpers"
keywords = ["b2", "api", "backup", "backblaze"]
categories = ["api-bindings"]
exclude = ["credentials"]
readme = "README.md"
edition = "2018"
repository = "https://github.com/KongouDesu/raze"
license = "MIT"


[dependencies]
base64 = "0.13"
url = "2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha1 = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"

pin-project = "1.0"
futures = "0.3"