[package]
name = "raze"
version = "0.4.0"
authors = ["Kongou <kongou@shipfu.moe>"]
description = "Rust-friendly API for for Backblaze's B2 backend - Includes raw calls and helpers"
keywords = ["b2", "api", "backup", "backblaze", "async"]
categories = ["api-bindings"]
exclude = ["credentials"]
readme = "README.md"
edition = "2018"
repository = "https://github.com/KongouDesu/raze"
license = "MIT"


[dependencies]
base64 = "0.13"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11" }

sha1 = { version = "0.6", features = ["std"], optional = true }
tokio = { version = "1", features = ["time"], optional = true }
tokio-util = { version = "0.6", optional = true }
pin-project = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "parking_lot"] }

[features]
utils = ["sha1", "tokio", "tokio-util", "pin-project", "futures", "bytes", "reqwest/stream"]

default = ["utils"]